<resources>
    <string name="app_name">Calculator Project V2</string>
    <string name="press_to_play">Press to play!</string>
    <string name="display">Display</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="goal">Goal:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">×</string>
    <string name="divide">÷</string>
    <string name="testbutton">testButton</string>
    <string name="welcome_to_calculator_the_puzzle">Welcome to Calculator the Puzzle</string>
    <string name="next">Next ➤</string>
    <string name="level_1">Level: 1</string>
</resources>
