<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LevelOneActivity">

    <!-- Display of the Numbers ^^-->

    <TextView
        android:id="@+id/levelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/level_1"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/goalDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/goal"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <TextView
        android:id="@+id/constraintDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Constraints:"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <!-- Button One ^^-->

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="412dp"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/_1"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Button Two ^^-->

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="412dp"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/_2"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/buttonOne"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Button Three ^^-->

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="412dp"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/_3"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonTwo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/_4"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

    <!--Button Four ^^-->

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/_5"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/buttonFour"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwo" />

    <!--Button Five ^^-->

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/_6"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonFive"
        app:layout_constraintTop_toBottomOf="@+id/buttonThree" />

    <!--Button Six ^^-->

    <!--Button Seven ^^-->

    <!--Button Eight ^^-->

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/_7"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/_8"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven"
        app:layout_constraintTop_toBottomOf="@+id/buttonFive"
        app:layout_constraintVertical_bias="0.042" />

    <!--Button Nine ^^-->

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/_9"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/buttonEight"
        app:layout_constraintTop_toBottomOf="@+id/buttonSix"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/additionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/plus"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeven"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/subtractionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/minus"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/additionButton"
        app:layout_constraintTop_toBottomOf="@+id/buttonEight"
        app:layout_constraintVertical_bias="0.417" />

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/times"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/subtractionButton"
        app:layout_constraintTop_toBottomOf="@+id/buttonNine"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="@string/divide"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionButton"
        app:layout_constraintVertical_bias="0.112" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="0"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEight"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:fontFamily="@font/baloo"
        android:text="Go!"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/divisionButton"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationButton"
        app:layout_constraintVertical_bias="0.16" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="107dp"
        android:scaleX="6"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/constraintDisplay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425"
        app:srcCompat="@drawable/displayrectangle" />

    <TextView
        android:id="@+id/display"
        android:layout_width="369dp"
        android:layout_height="44dp"
        android:fontFamily="@font/chelsea_market"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple_700"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />


</androidx.constraintlayout.widget.ConstraintLayout>